<resources>
    <string name="app_name">ExploreBulgaria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blagoevgrad">Благоевград</string>
    <string name="burgas">Бургас</string>
    <string name="varna">Варна</string>
    <string name="veliko_tarnovo">Велико&#10;Търново</string>
    <string name="vidin">Видин</string>
    <string name="vraca">Враца</string>
    <string name="gabrovo">Габрово</string>
    <string name="dobrich">Добрич</string>
    <string name="kardjali">Кърджали</string>
    <string name="kiustendil">Кюстендил</string>
    <string name="lovech">Ловеч</string>
    <string name="montana">Монтана</string>
    <string name="pazardjik">Пазарджик</string>
    <string name="pernik">Перник</string>
    <string name="pleven">Плевен</string>
    <string name="plovdiv">Пловдив</string>
    <string name="razgrad">Разград</string>
    <string name="ruse">Русе</string>
    <string name="silistra">Силистра</string>
    <string name="sliven">Сливен</string>
    <string name="smolyan">Смолян</string>
    <string name="sofiya">София</string>
    <string name="sofiya_oblast">София&#10;област</string>
    <string name="stara_zagora">Стара Загора</string>
    <string name="targovishte">Търговище</string>
    <string name="haskovo">Хасково</string>
    <string name="shumen">Шумен</string>
    <string name="yambol">Ямбол</string>
    <string name="title_activity_landmark_details">LandmarkDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>